testsuite/bsc.typechecker/kind/TypeAliasParamGivenTooMany_FromNone.bs.bsc-out.expected
checking package dependencies
compiling TypeAliasParamGivenTooMany_FromNone.bs
Error: "TypeAliasParamGivenTooMany_FromNone.bs", line 3, column 23: (T0021)
  Kind error at:
    Bit 8

  Expected kind:
    * -> *

  Inferred kind:
    *

