testsuite/bsc.typechecker/kind/TypeAliasParamGivenTooMany_FromNone.bs
package TypeAliasParamGivenTooMany_FromNone () where

type (Foo :: * -> *) = Bit 8

